# imap-clients

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: new-feat.md  new-fix.md
.github/workflows/: release.yml  version-bump.yml
golang/: README.md  benchmark.sh  go.mod  go.sum  main.go
nodejs/: README.md  benchmark.sh  package.json
nodejs/src/: index.js
python/: BACKOFF_DESIGN.md  GMAIL_IMAP_DESIGN.md  NOTES.md  README.md  SQLITE_QUERIES.md  benchmark.sh  imap_cli.py  requirements.txt
rust/: Cargo.toml
typescript/: README.md  benchmark.sh  package.json  tsconfig.json
typescript/src/: index.ts
