[package]
name = "imap-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "imap-cli"
path = "src/main.rs"

[dependencies]
async-imap = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
mail-parser = "0.9"
futures = "0.3"
anyhow = "1"
async-channel = "2"
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
dirs = "5"
